--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "snake-game"
 version = "0.1.0"
-authors = ["0x0188e74df010"]
+authors = ["revandrazm"]
 
 [dependencies]
+rand = "0.8.5"
 piston = "0.36.0"
 piston2d-graphics = "0.26.0"
 pistoncore-glutin_window = "0.45.0"
